--- a/code-samples/eventing/bookstore-sample-app/frontend/package.json
+++ b/code-samples/eventing/bookstore-sample-app/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.2.10",
     "framer-motion": "^11.0.22",
     "next": "14.1.4",
