--- a/config/nav.yml
+++ b/config/nav.yml
@@ -159,7 +159,7 @@ nav:
           - Configure the Defaults ConfigMap: serving/configuration/config-defaults.md
         - Serving encryption configuration:
           - Overview: serving/encryption/encryption-overview.md
-          - Install and configure net-certmanager: serving/encryption/install-and-configure-net-certmanager.md
+          - Configure cert-manager integration: serving/encryption/configure-certmanager-integration.md
           - Configure external domain encryption: serving/encryption/external-domain-tls.md
           - Configure cluster-local domain encryption: serving/encryption/cluster-local-domain-tls.md
           - Configure Knative system-internal encryption: serving/encryption/system-internal-tls.md
