--- a/code-samples/eventing/bookstore-sample-app/slack-sink/slack-sink-camel-pipe.yaml
+++ b/code-samples/eventing/bookstore-sample-app/slack-sink/slack-sink-camel-pipe.yaml
@@ -2,6 +2,8 @@ apiVersion: camel.apache.org/v1  # Specifies the API version of Camel K.
 kind: Pipe  # This resource type is a Pipe, a custom Camel K resource for defining integration flows.
 metadata:
   name: bookstore-notification-service  # The name of the Pipe, which identifies this particular integration flow.
+  annotations:
+    trait.camel.apache.org/mount.configs: "secret:slack-credentials"  # An annotation that specifies the secret to mount for the Pipe.
 spec:
   source:  # Defines the source of events for the Pipe.
     ref:
@@ -9,12 +11,12 @@ spec:
       apiVersion: eventing.knative.dev/v1  # The API version of the Knative Eventing Broker.
       name: broker  # The name of the Broker, "book-review-broker" in this case
     properties:
-      type: knative.sampleapp.sentiment.response  # A filter that specifies the type of events this Pipe will listen for, here it's listening for events of type "new-review-comment". You have to have this type specified.
+      type: new-review-comment  # A filter that specifies the type of events this Pipe will listen for, here it's listening for events of type "new-review-comment". You have to have this type specified.
   sink:  # Defines the destination for events processed by this Pipe.
     ref:
       kind: Kamelet  # Specifies that the sink is a Kamelet, a Camel K component for connecting to external services.
       apiVersion: camel.apache.org/v1  # The API version for Kamelet.
       name: slack-sink  # The name of the Kamelet to use as the sink, in this case, a predefined "slack-sink" Kamelet.
     properties:
-      channel: “#bookstore-owner”  # The Slack channel where notifications will be sent.
-      webhookUrl: "https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK"  # The Webhook URL provided by Slack for posting messages to a specific channel.
+      channel: ${slack.channel}  # The channel to post messages to, specified in the secret.
+      webhookUrl: ${slack.webhook.url} # The webhook URL to use for posting messages, specified in the secret.
