--- a/code-samples/eventing/bookstore-sample-app/db-service/300-expose-service.yaml
+++ b/code-samples/eventing/bookstore-sample-app/db-service/300-expose-service.yaml
@@ -2,9 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgresql
+  labels:
+    app: postgresql
 spec:
-  ports:
-    - port: 5432
   selector:
     app: postgresql
-  type: NodePort
+  ports:
+    - port: 5432
+      targetPort: 5432
+  clusterIP: None
