--- a/code-samples/eventing/bookstore-sample-app/db/bookstore-eda/package.json
+++ b/code-samples/eventing/bookstore-sample-app/db/bookstore-eda/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "cloudevents": "^8.0.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-ws": "^5.0.2",
+    "pg": "^8.11.5"
   }
 }
