--- a/code-samples/eventing/bookstore-sample-app/db/bookstore-eda/broker.yaml
+++ b/code-samples/eventing/bookstore-sample-app/db/bookstore-eda/broker.yaml
@@ -1,15 +1,22 @@
+#apiVersion: eventing.knative.dev/v1
+#kind: Broker
+#metadata:
+#  name: broker
+#  annotations:
+#    # case-sensitive
+#    eventing.knative.dev/broker.class: Kafka
+#    # Optional annotation to point to an externally managed kafka topic:
+#    # kafka.eventing.knative.dev/external.topic: <topic-name>
+#spec:
+#  config:
+#    apiVersion: v1
+#    kind: ConfigMap
+#    name: kafka-broker-config
+#    namespace: knative-eventing
+#
+#---
+
 apiVersion: eventing.knative.dev/v1
 kind: Broker
 metadata:
   name: broker
-  annotations:
-    # case-sensitive
-    eventing.knative.dev/broker.class: Kafka
-    # Optional annotation to point to an externally managed kafka topic:
-    # kafka.eventing.knative.dev/external.topic: <topic-name>
-spec:
-  config:
-    apiVersion: v1
-    kind: ConfigMap
-    name: kafka-broker-config
-    namespace: knative-eventing
